--- a/assets/style/font.scss
+++ b/assets/style/font.scss
@@ -1,62 +1,43 @@
 @font-face {
-  font-family: system-ui;
-  font-style: normal;
-  font-weight: 300;
-  src: local(".SFNS-Light"), local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Segoe UI Light"), local("Ubuntu Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
-}
-
-@font-face {
-  font-family: system-ui;
-  font-style: italic;
-  font-weight: 300;
-  src: local(".SFNS-LightItalic"), local(".SFNSText-LightItalic"), local(".HelveticaNeueDeskInterface-Italic"), local(".LucidaGrandeUI"), local("Segoe UI Light Italic"), local("Ubuntu Light Italic"), local("Roboto-LightItalic"), local("DroidSans"), local("Tahoma");
-}
-
-@font-face {
-  font-family: system-ui;
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
-  src: local(".SFNS-Regular"), local(".SFNSText-Regular"), local(".HelveticaNeueDeskInterface-Regular"), local(".LucidaGrandeUI"), local("Segoe UI"), local("Ubuntu"), local("Roboto-Regular"), local("DroidSans"), local("Tahoma");
+  font-display: swap;
+  src: url('/fonts/raleway-v14-latin-regular.woff2') format('woff2'), url('/fonts/raleway-v14-latin-regular.woff') format('woff');
 }
 
 @font-face {
-  font-family: system-ui;
-  font-style: italic;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('/fonts/raleway-v14-latin-700.woff2') format('woff2'), url('/fonts/raleway-v14-latin-700.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Quicksand';
+  font-style: normal;
   font-weight: 400;
-  src: local(".SFNS-Italic"), local(".SFNSText-Italic"), local(".HelveticaNeueDeskInterface-Italic"), local(".LucidaGrandeUI"), local("Segoe UI Italic"), local("Ubuntu Italic"), local("Roboto-Italic"), local("DroidSans"), local("Tahoma");
+  font-display: swap;
+  src: url('/fonts/quicksand-v19-latin-regular.woff2') format('woff2'), url('/fonts/quicksand-v19-latin-regular.woff') format('woff');
 }
 
 @font-face {
-  font-family: system-ui;
-  font-style: normal;
-  font-weight: 500;
-  src: local(".SFNS-Medium"), local(".SFNSText-Medium"), local(".HelveticaNeueDeskInterface-MediumP4"), local(".LucidaGrandeUI"), local("Segoe UI Semibold"), local("Ubuntu Medium"), local("Roboto-Medium"), local("DroidSans-Bold"), local("Tahoma Bold");
-}
-
-@font-face {
-  font-family: system-ui;
-  font-style: italic;
-  font-weight: 500;
-  src: local(".SFNS-MediumItalic"), local(".SFNSText-MediumItalic"), local(".HelveticaNeueDeskInterface-MediumItalicP4"), local(".LucidaGrandeUI"), local("Segoe UI Semibold Italic"), local("Ubuntu Medium Italic"), local("Roboto-MediumItalic"), local("DroidSans-Bold"), local("Tahoma Bold");
-}
-
-@font-face {
-  font-family: system-ui;
+  font-family: 'Quicksand';
   font-style: normal;
   font-weight: 700;
-  src: local(".SFNS-Bold"), local(".SFNSText-Bold"), local(".HelveticaNeueDeskInterface-Bold"), local(".LucidaGrandeUI"), local("Segoe UI Bold"), local("Ubuntu Bold"), local("Roboto-Bold"), local("DroidSans-Bold"), local("Tahoma Bold");
-}
-
-@font-face {
-  font-family: system-ui;
-  font-style: italic;
-  font-weight: 700;
-  src: local(".SFNS-BoldItalic"), local(".SFNSText-BoldItalic"), local(".HelveticaNeueDeskInterface-BoldItalic"), local(".LucidaGrandeUI"), local("Segoe UI Bold Italic"), local("Ubuntu Bold Italic"), local("Roboto-BoldItalic"), local("DroidSans-Bold"), local("Tahoma Bold");
+  font-display: swap;
+  src: url('/fonts/quicksand-v19-latin-700.woff2') format('woff2'), url('/fonts/quicksand-v19-latin-700.woff') format('woff');
 }
 
 html {
-  font-family: 'system-ui', sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 70%;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: Quicksand, sans-serif;
+  letter-spacing: .05em;
 }
 
 @media only screen and (min-width: $bp-ls-phones) {
@@ -90,11 +71,11 @@ html {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 h2 {
-  font-size: 1.8rem;
+  font-size: 2.2rem;
 }
 
 h3 {
